# hypergraph

./: Cargo.toml  README.md  flake.nix
.github/workflows/: Container.yaml
cnf_partitioner/: Cargo.toml
cnf_partitioner/src/: cnf.rs  d4.rs  main.rs  output.rs  partition.rs  partitioner.rs
cnf_partitioner/src/partitioner/: kahypar.rs  mtkahypar.rs  patoh.rs  random.rs  rust.rs
cnf_partitioner/src/partitioner/kahypar/: default.ini
evaluation/: .gitignore  generate_plots.m  job.sh  metric_plot.m  run.sh
hypergraph/: Cargo.toml  build.rs
hypergraph/src/: ffi.rs  hypergraph.rs  lib.rs  partitioner.rs
hypergraph/src/hypergraph/: search.rs
hypergraph/src/hypergraph/search/: search_collection.rs
hypergraph/src/partitioner/: bfs.rs  dfs.rs  partition.rs  random.rs
hypergraph_formats/: Cargo.toml
hypergraph_formats/src/: cnf.rs  format.rs  graph.rs  header.rs  hmetis.rs  lib.rs  patoh.rs
hypergraph_formats/src/hmetis/: comment.rs  format.rs  graph.rs  header.rs
hypergraph_formats/src/patoh/: format.rs  graph.rs  header.rs
hypergraph_partitioner/: Cargo.toml
hypergraph_partitioner/src/: main.rs  mode.rs
nix/: cnf_partitioner.nix  hypergraph_partitioner.nix  kahypar.nix  kahypar.patch  patoh.nix
partition_metrics/: Cargo.toml
partition_metrics/src/: cnf.rs  csv.rs  dimension.rs  main.rs  utils.rs  width.rs
