[package]
name = "hypergraph_formats"
version = "0.1.0"
description = "A hmetis hypergraph file format implementation."
edition = "2021"
license = "LGPL-3.0"
authors = ["Jan Baudisch <jan.baudisch@uni-ulm.de>"]
readme = "../README.md"
homepage = "https://github.com/uulm-janbaudisch/hypergraph"
repository = "https://github.com/uulm-janbaudisch/hypergraph.git"
workspace = ".."

[features]
cnf = ["dep:dimacs", "dep:clap", "dep:strum"]

[dependencies]
clap = { workspace = true, optional = true }
dimacs = { version = "0.2", optional = true }
nom = "7"
strum = { version = "0.26", features = ["derive"], optional = true }
