[package]
name = "hypergraph_partitioner"
version = "0.1.0"
description = "A CLI hypergraph partitioner."
edition = "2021"
license = "LGPL-3.0"
authors = ["Jan Baudisch <jan.baudisch@uni-ulm.de>"]
readme = "../README.md"
homepage = "https://github.com/uulm-janbaudisch/hypergraph"
repository = "https://github.com/uulm-janbaudisch/hypergraph.git"
workspace = ".."

[dependencies]
clap = { workspace = true }
hypergraph = { workspace = true, features = ["formats"] }
hypergraph_formats = { workspace = true }
